--- a/style.css
+++ b/style.css
@@ -1,80 +1,165 @@
-
-    @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap');
-
-  @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
 *{
-    margin: 0%;
-    padding: 0%;
-}
-
-.slidebar{
- background-color: rgb(9, 109, 101);
- width: 12vw;
- font-family: 'Josefin Sans', sans-serif;
-padding: 2px;
-height:100vw;
+    margin: 0;
+    padding:0;
+    font-family: Arial, Helvetica, sans-serif;
+    box-sizing: border-box;
 
 }
-.slidebar nav{
-    padding:14px
-
+body{
+    background:#e6e5eb;
+    color: rgb(8, 8, 8);
 }
-.slidebar nav li{
-   
-        padding:30px 0;
-    font-size:20px;
-    font-weight: bolder;
-}
-.main{
-    /* background-color: rgb(28, 156, 156); */
-width: 90vw;
-
+#header{
+    width: 100%;
+    height: 100vh;
+    /* background-image: url(/logo.png) ; */
+   /* background-color: #080808; */
+    background-size: cover;
+    background-position: center;
 }
 .container{
+    padding: 10px 10px;
+}
+
+nav{
     display: flex;
+    background: #000;
+    align-items:center ;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+nav ul li{
+    display: inline-block;
+    list-style: none;
+   margin:10px 20px ;
+}
+nav ul li a{
+    color: rgb(255, 255, 255);
+    text-decoration: none;
+    font-size:18px;
 
 }
-.infocontainer{
-    /* background-color: aquamarine; */
-    width: 80vw;
-height:80vh;
-margin:100px auto;
-display: flex;
-justify-content: space-around;
-}
-.devpic{
-    display:flex;
-   
+/* .tab::after{
+    content:'';
+    width:0;
+    height:4px;
+    background:#5e5d63;
+    position:absolute;
+    left:0;
+    bottom: -9px;
+    transition:0.5s;
+} */
+nav ul li a::after{
+    content:'';
+   /* width:100%; */
+    height:3px;
+    background: rgb(12, 100, 100);
+    position: absolute;
+    left:0;
+    bottom:-8px;
+    transition: 0.5s;
     
-    justify-content: center;
 }
-.devpic img
-{
- height:80vh;
+nav ul li a:hover::after{
+    width:100%;
 }
-.devinfo{
-    display:flex;
-    justify-content: center;
-    flex-direction: column;
-}
-.hello{
-    font-family: 'Poppins', sans-serif;
-     font-size: xx-large;
-}
-.name{
 
-     font-size: xxx-large;
-   
-/* font-family: 'Poppins', sans-serif; */
-    font-weight: 900;
+.header_txt{
+    margin-top: 120px;
+    font-size:20px;
+
+
 }
-.about{
-    font-size:x-large;
-    font-variant-caps: small-caps;
-    font-weight: bolder;
+.header_txt h1{
+    font-size:50px;
+    margin-top:20px;
 }
-.buttons button{
+.header_txt h1 span{
+    color: rgb(12, 100, 100);
+}
+/* --------------about? */
+#about{
+    padding:80px;
+    color:#000000;
+}
+
+
+.row{ 
+    display:flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+
+}
+.about_c1{
+    flex-basis: 34%;
+}
+.about_c1 img{
+    width:100%;
+    border-radius: 34px;
+} 
+.about_c2 {
+ flex-basis: 60%;
+}
+.stitle{
+    font-size: 36px;
+    font-weight:500;
+    color:rgb(2, 2, 2)
     
-     font-size: xxx-large;
-font-family: 'Poppins', sans-serif;
 }
+.tabtitles{
+    display:flex;
+    margin:20px 0 40px;
+
+}
+.tab{
+    margin-right: 50px;
+    font-size: 24px;
+    font-weight: 600;
+    cursor:pointer;
+    position: relative;
+
+}
+.tab::after{
+    content:'';
+    width:0;
+    height:4px;
+    background:rgb(12, 100, 100);
+    position:absolute;
+    left:0;
+    bottom: -9px;
+    transition:0.5s;
+}
+.tab.a-link::after{
+    width:50%;
+}
+.tab-c ul li{
+    list-style:none;
+    margin: 10px 0;
+    font-size: 12px;
+}
+.tab-c ul li span{
+    color:rgb(12, 100, 100);
+    font-size: 15px;
+    font-weight: 700;
+}
+.tab-c ul li ol li{
+    list-style-type:circle;
+}
+.tab-c ul li ol li{
+    font-size: 11px;
+    font-weight: 600;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
