--- a/style.css
+++ b/style.css
@@ -1,4 +1,7 @@
-* {
+ @import url('https://cdn-uicons.flaticon.com/uicons-bold-rounded/css/uicons-bold-rounded.css');
+@import url('https://cdn-uicons.flaticon.com/uicons-solid-rounded/css/uicons-solid-rounded.css');
+@import url('https://cdn-uicons.flaticon.com/uicons-bold-straight/css/uicons-bold-straight.css');
+ * {
     margin: 0;
     padding: 0;
     font-family: Arial, Helvetica, sans-serif;
@@ -21,7 +24,7 @@ body {
 }
 
 .container {
-    padding: 10px 10px;
+    padding: 10px 40px;
 }
 
 nav {
@@ -180,24 +183,55 @@ nav ul li a:hover::after {
 }
 /* =================services? */
 #services{
-    background-color: hsl(0, 0%, 0%);
+    /* background-color: rgb(12, 100, 100);
     margin-top: 130px;
-    color:#e6e5eb;
-    padding: 30px 60px 34px;
+    color:rgb(209, 216, 216); */
+    padding: 30px 10px ;
 
 
 }
-.sstitle{
+/* .sstitle{
      font-size: 60px;
     font-weight: 500;
-    color: rgb(255, 253, 253);
+    color: rgb(0, 0, 0);
     margin: 34px;
-}
+} */
 .servic-list{
     display: grid;
     grid-template-columns:repeat(auto-fit,minmax(250px,1fr)) ;
-    grid-gap:40px;
-
+    grid-gap:90px;
+margin-top: 50px;
 
 }
+.servic-list div {
+    background: rgb(12, 100, 100);
+    padding: 40px;
+    font-size:12px;
+    font-weight:400;
+    border-radius: 13px;
+ 
+}
+.servic-list div a{
+    text-decoration: none;
+   color: rgb(171, 175, 175);
+   margin-top: 20px;
+   /* font-weight: 700; */
+   font-size: 12px;
+   display: inline-block;
+}
+ .servic-list div h2 {
+   
+  margin-bottom: 17px;
+    font-size: 34px;
+    font-weight:600;
+  
+ 
+}
+
+.servic-list div i {
+    
+    font-size:56px;
+    margin-bottom:40px;
+    align-items: center;
+   }
 
