--- a/style.css
+++ b/style.css
@@ -1,14 +1,14 @@
  @import url('https://cdn-uicons.flaticon.com/uicons-bold-rounded/css/uicons-bold-rounded.css');
 @import url('https://cdn-uicons.flaticon.com/uicons-solid-rounded/css/uicons-solid-rounded.css');
 @import url('https://cdn-uicons.flaticon.com/uicons-bold-straight/css/uicons-bold-straight.css');
-/*  * {
+ * {
     margin: 0;
     padding: 0;
     font-family: Arial, Helvetica, sans-serif;
     box-sizing: border-box;
 
 }
- */
+
 body {
     background: #e6e5eb;
     color: rgb(8, 8, 8);
